# NachOS_w_CMake

./: README.md
code/: .gitignore  CMakeLists.txt
code/build.cygwin/: Makefile
code/build.linux/: Makefile.dep
code/lib/: hash.cc  sysdep.cc
code/threads/: synchlist.cc
code/userprog/: syscall.h
